manifests/bootstrap/oauth2-proxy-extras/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-route
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: authsecure
  hostnames:
    - auth.iemafzalhassan.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 80
